# penumbra

./: Cargo.toml
crates/co-penumbra/: .gitignore  Cargo.toml  README.md
crates/co-penumbra/src/: main.rs
crates/core/component/dex/src/swap/: proof.rs
crates/core/component/dex/src/swap_claim/: proof.rs
crates/core/component/governance/src/delegator_vote/: proof.rs
crates/core/component/shielded-pool/src/: convert.rs  nullifier_derivation.rs
crates/core/component/shielded-pool/src/output/: proof.rs
crates/core/component/shielded-pool/src/spend/: proof.rs
