[package]
name = "co-penumbra"
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow = {workspace = true}
rand = {workspace = true}
ark-ff = {workspace = true, default-features = false}
ark-poly = { version = "0.4.2", default-features = false }
ark-relations = {workspace = true}
ark-serialize = {workspace = true}
penumbra-sdk-asset = {workspace = true, default-features = false}
penumbra-sdk-keys = {workspace = true, default-features = false}
penumbra-sdk-sct = {workspace = true, default-features = false}
penumbra-sdk-tct = {workspace = true, default-features = true}
penumbra-sdk-dex = {workspace = true, default-features = true}
penumbra-sdk-num = {workspace = true, default-features = true}
penumbra-sdk-fee = {workspace = true, default-features = true}
penumbra-sdk-stake = {workspace = true, default-features = true}
penumbra-sdk-shielded-pool= {workspace = true, default-features = true}
penumbra-sdk-governance = {workspace = true, default-features = false}
byteorder = "1.5.0"
decaf377 = {workspace = true, features = ["r1cs"], default-features = true}
decaf377-rdsa = {workspace = true}
tracing = {workspace = true}
clap = {workspace = true, features = ["derive"]}

